<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ImageFragment">

    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_dollar"
        android:id="@+id/img_song"/>

    <TextView
        android:id="@+id/tv_playing_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_name_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/i_need_a_dollar"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="15dp"
        android:textSize="40sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/aloe_blacc"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic" />

</FrameLayout>